# web-scraping

./: .gitignore
idealista_scrapling_ericeira/: .gitignore  README.md  pyproject.toml
idealista_scrapling_ericeira/config/: extract_fields.json  proxies.example.txt  targets.toml
idealista_scrapling_ericeira/portable/: index.html
idealista_scrapling_ericeira/src/idealista_ericeira_scraper/: __main__.py  cli.py  config.py  core.py  dashboard.py  fetching.py  io_utils.py  journal.py  parsers.py  scraper.py  ui.py
idealista_scrapling_ericeira/src/idealista_ericeira_scrapling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
idealista_scrapling_ericeira/tests/: test_dashboard.py  test_fetching.py  test_journal.py  test_parsers.py
olx_scraper/: README.md  olx_carros.jsonl  olx_carros_playwright.ipynb  olx_scraper.py  olx_scraper_frontend_streamlit.py
olx_scraper/output/: brands_discovered.json  checkpoint_olx_carros.json  olx_carros_final_frontend.csv  olx_carros_final_frontend.json  olx_carros_incremental.csv  olx_carros_incremental.jsonl  olx_carros_incremental_frontend.csv  olx_carros_incremental_frontend.jsonl
scrapper/: infarmed_pmro_doacoes.csv  infarmed_pmro_doacoes.json  infarmed_pmro_scraper.py  infarmed_pmro_scraper_incremental.ipynb  infarmed_pmro_scraper_incremental_2years_parallel.ipynb  olx_carros_ads.json  olx_carros_scraper.py
scrapper/infarmed_output/: .~lock.doacoes_2025.csv#  doacoes_2025.csv  doacoes_2025_checkpoint.json  doacoes_2026.csv  doacoes_2026.jsonl  doacoes_2026_checkpoint.json
